version/0.15/_sources/api/ansys/dpf/core/operators/result/compute_stress_3/InputsComputeStress3.rst.txt






:class:`InputsComputeStress3`
=============================


.. py:class:: ansys.dpf.core.operators.result.compute_stress_3.InputsComputeStress3(op: ansys.dpf.core.dpf_operator.Operator)

   Bases: :py:obj:`ansys.dpf.core.inputs._Inputs`


   Intermediate class used to connect user inputs to
   compute_stress_3 operator.

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.result.compute_stress_3()
   >>> my_scoping = dpf.Scoping()
   >>> op.inputs.scoping.connect(my_scoping)
   >>> my_streams_container = dpf.StreamsContainer()
   >>> op.inputs.streams_container.connect(my_streams_container)
   >>> my_data_sources = dpf.DataSources()
   >>> op.inputs.data_sources.connect(my_data_sources)
   >>> my_requested_location = str()
   >>> op.inputs.requested_location.connect(my_requested_location)
   >>> my_strain = dpf.FieldsContainer()
   >>> op.inputs.strain.connect(my_strain)






.. py:currentmodule:: InputsComputeStress3

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~connect`
            - Connect any input (an entity or an operator output) to any input pin of this operator.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~scoping`
            - Allows to connect scoping input to the operator.
          * - :py:attr:`~streams_container`
            - Allows to connect streams_container input to the operator.
          * - :py:attr:`~data_sources`
            - Allows to connect data_sources input to the operator.
          * - :py:attr:`~requested_location`
            - Allows to connect requested_location input to the operator.
          * - :py:attr:`~strain`
            - Allows to connect strain input to the operator.




   .. tab-item:: Special methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__str__`
            - 
          * - :py:attr:`~__call__`
            - 
          * - :py:attr:`~__getitem__`
            - 




Import detail
-------------

.. code-block:: python

    from ansys.dpf.core.operators.result.compute_stress_3 import InputsComputeStress3

Property detail
---------------

.. py:property:: scoping
   :type: ansys.dpf.core.inputs.Input[ansys.dpf.core.scoping.Scoping]


   Allows to connect scoping input to the operator.

   The element scoping on which the result is computed.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.result.compute_stress_3()
   >>> op.inputs.scoping.connect(my_scoping)
   >>> # or
   >>> op.inputs.scoping(my_scoping)

.. py:property:: streams_container
   :type: ansys.dpf.core.inputs.Input[ansys.dpf.core.streams_container.StreamsContainer]


   Allows to connect streams_container input to the operator.

   Needed to get mesh and material ids. Optional if a data_sources have been connected.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.result.compute_stress_3()
   >>> op.inputs.streams_container.connect(my_streams_container)
   >>> # or
   >>> op.inputs.streams_container(my_streams_container)

.. py:property:: data_sources
   :type: ansys.dpf.core.inputs.Input[ansys.dpf.core.data_sources.DataSources]


   Allows to connect data_sources input to the operator.

   Needed to get mesh and material ids. Optional if a streams_container have been connected.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.result.compute_stress_3()
   >>> op.inputs.data_sources.connect(my_data_sources)
   >>> # or
   >>> op.inputs.data_sources(my_data_sources)

.. py:property:: requested_location
   :type: ansys.dpf.core.inputs.Input[str]


   Allows to connect requested_location input to the operator.

   Average the Elemental Nodal result to the requested location.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.result.compute_stress_3()
   >>> op.inputs.requested_location.connect(my_requested_location)
   >>> # or
   >>> op.inputs.requested_location(my_requested_location)

.. py:property:: strain
   :type: ansys.dpf.core.inputs.Input[ansys.dpf.core.fields_container.FieldsContainer | ansys.dpf.core.field.Field]


   Allows to connect strain input to the operator.

   Field/or fields container containing only the elastic strain field (element nodal).

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.result.compute_stress_3()
   >>> op.inputs.strain.connect(my_strain)
   >>> # or
   >>> op.inputs.strain(my_strain)




Method detail
-------------

.. py:method:: __str__()

.. py:method:: connect(inpt)

   Connect any input (an entity or an operator output) to any input pin of this operator.

   Searches for the input type corresponding to the output.

   .. deprecated::
       Deprecated in favor of explicit output-to-input connections.


.. py:method:: __call__(inpt)

.. py:method:: __getitem__(item) -> Input




